# ChangeLog for games-action/battalion
# Copyright 2000-2004 Gentoo Technologies, Inc.; Distributed under the GPL v2
# $Header: /usr/local/ssd/gentoo-x86/output/games-action/cvs-repo/gentoo-x86/games-action/battalion/ChangeLog,v 1.2 2004/06/03 23:10:05 wolf31o2 Exp $

  03 Jun 2004; Chris Gianelloni <wolf31o2@gentoo.org> battalion-1.4b.ebuild:
  Adding dodir...

*battalion-1.4b (03 Jun 2004)

  03 Jun 2004; Chris Gianelloni <wolf31o2@gentoo.org> +battalion-1.4b.ebuild:
  Initial import. Ebuild submitted by Alexandru Toma <flash3001@yahoo.com>.
  Closing bug #52682.
