@@ -1,4 +1,4 @@
-MD5 69983783fdf392c86100b28de4f2d4a6 battalion-1.4b.ebuild 1842
-MD5 eacbf1cccf7ee5b6e703d8aa9af3e251 ChangeLog 532
+MD5 085d497dfeb223e0262bcccd8a8dc91d ChangeLog 676
+MD5 9662d2b881ed313ea77a41d8aceb4ca7 battalion-1.4b.ebuild 1739
 MD5 f17b9b8fa07a38914fe1c03268f51678 metadata.xml 158
 MD5 b52bd3a03b360ec5ae1bb934a5bcc61c files/digest-battalion-1.4b 66
