@@ -1,6 +1,9 @@
 # ChangeLog for games-action/battalion
 # Copyright 2000-2004 Gentoo Technologies, Inc.; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/games-action/cvs-repo/gentoo-x86/games-action/battalion/ChangeLog,v 1.2 2004/06/03 23:10:05 wolf31o2 Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/games-action/cvs-repo/gentoo-x86/games-action/battalion/ChangeLog,v 1.3 2004/06/03 23:17:46 mr_bones_ Exp $
+
+  03 Jun 2004; Michael Sterrett <mr_bones_@gentoo.org> battalion-1.4b.ebuild:
+  use generic src_compile; rm in unpack; use cp instead of doins
 
   03 Jun 2004; Chris Gianelloni <wolf31o2@gentoo.org> battalion-1.4b.ebuild:
   Adding dodir...
